fix(): reinstate working config

--- a/amplify.yaml
+++ b/amplify.yaml
@@ -10,5 +10,6 @@ frontend:
       commands:
         - mkdocs build
   artifacts:
+    baseDirectory: site
     files:
-      - "site/*"
+      - "**/*"
